--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -30,7 +30,7 @@
 
 1944年初，美军进行了一个月的空袭、炮击和封锁，包括使用穿甲弹，用以.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 7:19 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12517018.md#1" target="_blank">【名家专栏】全球对中共的态度越趋强硬</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12517018.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1178637558-150x120.jpg" align ="left"></a>假如中共是一只股票，那么全世界的人民都不会购买。许多国家的人们似乎都识破中共的诡计并对其提出挑战。中共越偏执冷酷地追求硬实力，其软实力就变得越差。国际公众态度的加强，以及受到中共影响政府的经济和地缘政治的抵制表明，中共不受限制扩张的窗口确实已经关闭。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 7:15 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12520988.md#1" target="_blank">读者投书：曝光青岛市的黑暗和邪恶</a><br></h3>青岛市这些年一直是靠谎言及涉黑人员统治,但是表面却又以各种各样的伪善伪装,高举依法治国实际上带头违法,青岛市每一件冤假错案几乎都是政府人员人为造成的,仅举几个例子：......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 9:03 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12516919.md#1" target="_blank">张慧东：中共五中全会为何再提备战？</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12516919.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2013/10/1306192104291657-150x120.jpg" align ="left"></a>10月29日，中共十九届五中全会结束后，中共喉舌新华社发布中共十九届五中全会会议公报，公报称“全面加强练兵备战，提高捍卫国家主权、安全、发展利益的战略能力”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 4:59 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520835.md#1" target="_blank">向真：共产主义阴影下 人民的自救之道</a><br></h3>每年的十一月七日，是“共产主义受害者纪念日”。去年该日，美国白宫发表川普总统的声明说：“在这一天，我们铭记一亿多因为共产主义压迫而死去的人们。今天，我们重申致力于基于民主、自由、正义和对每个人生命价值的深切尊重基础上，帮助所有人确保和平与繁荣的未来。”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 7:34 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12519321.md#1" target="_blank">陈思敏：消费下行成趋势 中共扩大割韭菜</a><br></h3>中共十四五规划“扩大内需”，此内需与十三五之前的内需不同，想要的效果是扩大国内居民消费。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 4:58 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12518588.md#1" target="_blank">吐为快：无语</a><br></h3>一片沼泽岁月静，五中死寂掌声惊；
