--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -2,6 +2,7 @@
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12528176.md#1" target="_blank">大选日后 川普总统发表首个声明</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12528176.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229449771-1-320x200.jpg" align ="left"></a>美国大选计票欺诈问题持续升温。周四（11月5日），白宫发言人凯莱·麦肯纳尼（Kayleigh McEnany）发表美国总统川普（特朗普）在大选日后的首个声明，再.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月06日 3:30 AM					</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520407.md#1" target="_blank">【重播】川普团队：内华达政府纵容非法投票</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520407.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/Untitled-3-150x120.jpg" align ="left"></a>美东时间周四（11月5日）上午11:30，川普（特朗普）竞选团队在拉斯维加斯召开“重要声明”发布会。新唐人、大纪元将进行现场直播（中文同声翻译），敬请收看。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月06日 12:31 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1" target="_blank">【大选更新11.5】川普：在宾州获巨大法律胜利</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229449400-150x120.jpg" align ="left"></a>2020年的美国大选陷入困境，民主党候选人拜登的票数出现了戏剧性反转后，川普阵营对此提出强烈质疑，并在多州采取法律行动，以遏制可能的计票舞弊，川普阵营并自行宣布在宾夕法尼亚、乔治亚和北卡罗来纳州三州胜选。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月05日 11:56 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/29/n12510783.md#1" target="_blank">迫害法轮功 广东670人遭厄运 公安系统居多（1）</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/29/n12510783.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/2020-10-28-mh-guangdong-ebao-2-150x120.png" align ="left"></a>根据明慧网信息不完全统计，自1999年7月中共迫害法轮功以来，广东省参与迫害而遭厄运的至少有670人，祸及家人72人，遭厄运中死亡的有182人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月05日 11:38 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527603.md#1" target="_blank">云南最大商贸城租金暴涨 数万商户罢市抗议</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527603.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/4bd9021a9aec8230082bd11e3cbbbc6e-150x120.png" align ="left"></a>11月4日，云南昆明新螺蛳湾国际商贸城数万商户，继3日罢市后，再次举行罢市抗议活动。商户们纷纷关灯、关门，聚集到商贸城中，口喊抗议口号，要求市场方停止无理的巨额涨租行为。
 
 当天，昆明官渡警察到场镇压商户的正当抗议活动，并当场抓人。据商户透露，有5个人被抓，今早（5日）才释放。商户们接下来将开始为抵制市场方涨租，联名签署抗议信，上访当地监管部门。
@@ -47,6 +48,5 @@
 
 面对这场中共病毒世纪瘟疫，人类将何去何从？面临怎样的选择？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月04日 5:54 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12523312.md#1" target="_blank">【图解】选前震撼弹 拜登电脑门事件簿</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12523312.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/joe-biden-dnm-djy-1104-150x120.jpg" align ="left"></a>2020美国大选前，民主党候选人乔·拜登及其家族丑闻曝光，震动美国朝野。从10月14日《纽约邮报》披露拜登之子的“电脑门”事件，到其生意伙伴波布林斯基的举报，证据显示拜登家族涉嫌与中共、乌克兰等国进行权钱交易。左派媒体和社交平台极力掩盖丑闻，并打压曝光真相的媒体，令美国蒙羞。大纪元梳理拜登电脑门事件簿，让读者一......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月04日 3:35 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12522711.md#1" target="_blank">美印日澳联合军演 联手应对中共军事扩张</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12522711.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/50552713693_1f5f47a336_o-150x120.jpg" align ="left"></a>“四方会谈”成员国上月举行外长会议后，目前又举行联合军演，共同应对中共在亚太地区的军事扩张。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月04日 2:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/xcbfpq327/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
